--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -72,7 +72,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/JeaBew/websitetest2'
     content_dir: content
     branch: main
   avatar:
