--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Test Test Test # Website name
+title: KISSPro # Website name
 baseURL: 'https://jeabew.github.io/websitetest2/' # Website URL
 
 ############################
