--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,8 @@ main:
   - name: People
     url: people
     weight: 10
-  - name: Tour
-    url: tour
+  - name: Projects
+    url: projects
     weight: 20
   - name: News
     url: post
