--- a/data/themes/kissprotheme.toml
+++ b/data/themes/kissprotheme.toml
@@ -6,7 +6,7 @@ name = "KISSProTheme"
   primary = "#1565c0"
 
   # Menu
-  menu_primary = "#F90250"
+  menu_primary = "#ff3859"
   menu_text = "#34495e"
   menu_text_active = "#2962ff"
   menu_title = "#2b2b2b"
