--- a/data/themes/kissprotheme.toml
+++ b/data/themes/kissprotheme.toml
@@ -7,7 +7,7 @@ name = "KISSProTheme"
 
   # Menu
   menu_primary = "#ff3859"
-  menu_text = "#34495e"
+  menu_text = "#000000"
   menu_text_active = "#2962ff"
   menu_title = "#2b2b2b"
 
