new category names

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,10 +4,10 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: People
+  - name: Team
     url: people
     weight: 10
-  - name: Projects
+  - name: Projekte
     url: projects
     weight: 20
   - name: News
@@ -16,9 +16,9 @@ main:
   - name: Events
     url: event
     weight: 40
-  - name: Publications
+  - name: Publicationen
     url: publication
     weight: 50
-  - name: Contact
+  - name: Kontakt
     url: contact
     weight: 60
