--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,9 +13,9 @@ main:
   - name: News
     url: post
     weight: 30
-  - name: Events
-    url: event
-    weight: 40
+  #- name: Events
+  #  url: event
+  #  weight: 40
   - name: Publikationen
     url: publication
     weight: 50
