--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: KISS-Pro # Website name
-baseURL: 'https://jeabew.github.io/websitetest2/' # Website URL
+baseURL: 'https://kiss-pro.github.io/kisspro-website/' # Website URL
 
 ############################
 ## LANGUAGE
