--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -38,7 +38,7 @@ header:
     show_logo: true
     show_language: false
     show_day_night: true
-    show_search: true
+    show_search: false
     highlight_active_link: false
 
 # Site footer
@@ -72,7 +72,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/JeaBew/websitetest2'
+    url: 'https://github.com/kiss-pro/kisspro-website.git'
     content_dir: content
     branch: main
   avatar:
