--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -58,10 +58,13 @@ jobs:
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./public
+      - name: Upload artifact to v4
         uses: actions/upload-artifact@v4
         with:
           path: ./public
-
   # Deployment job
   deploy:
     environment:
