--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -57,13 +57,10 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: ./public
       - name: Upload artifact to v4
         uses: actions/upload-artifact@v4
         with:
+          name: my-artifact
           path: ./public
   # Deployment job
   deploy:
