--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -57,10 +57,10 @@ jobs:
           hugo \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-      - name: Upload artifact to v4
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: my-artifact
+          name: github-pages
           path: ./public
   # Deployment job
   deploy:
