--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Install Dart Sass
         run: sudo snap install dart-sass
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: true
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
