--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -51,9 +51,10 @@ jobs:
         id: pages
         uses: actions/configure-pages@v4
       - name: Install Node.js dependencies
-        run: if [[ -f package-lock.json || -f npm-shrinkwrap.json ]]; then
-         npm ci
-         fi
+        run: |
+          if [[ -f package-lock.json || -f npm-shrinkwrap.json ]]; then
+            npm ci
+          fi
       - name: Build with Hugo
         env:
           # For maximum backward compatibility with Hugo modules
